Finish initial plots for Monaco

--- a/notebooks/monaco25/speed-map.ipynb
+++ b/notebooks/monaco25/speed-map.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "5907aebb",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "881b53cb",
    "metadata": {},
    "outputs": [
@@ -33,100 +33,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "req         WARNING \tDEFAULT CACHE ENABLED! (2.22 GB) /Users/mjbernha/Library/Caches/fastf1\n",
       "core           INFO \tLoading data for Monaco Grand Prix - Practice 3 [v3.5.3]\n",
-      "req            INFO \tNo cached data found for session_info. Loading data...\n",
-      "_api           INFO \tFetching session info data...\n",
-      "req            INFO \tData has been written to cache!\n",
-      "req            INFO \tNo cached data found for driver_info. Loading data...\n",
-      "_api           INFO \tFetching driver list...\n",
-      "req            INFO \tData has been written to cache!\n",
+      "req            INFO \tUsing cached data for session_info\n",
+      "req            INFO \tUsing cached data for driver_info\n",
       "core        WARNING \tNo result data for this session available on Ergast! (This is expected for recent sessions)\n",
-      "req            INFO \tNo cached data found for session_status_data. Loading data...\n",
-      "_api           INFO \tFetching session status data...\n",
-      "req            INFO \tData has been written to cache!\n",
-      "req            INFO \tNo cached data found for track_status_data. Loading data...\n",
-      "_api           INFO \tFetching track status data...\n",
-      "req            INFO \tData has been written to cache!\n",
-      "req            INFO \tNo cached data found for _extended_timing_data. Loading data...\n",
-      "_api           INFO \tFetching timing data...\n",
-      "_api           INFO \tParsing timing data...\n",
-      "req            INFO \tData has been written to cache!\n",
-      "req            INFO \tNo cached data found for timing_app_data. Loading data...\n",
-      "_api           INFO \tFetching timing app data...\n",
-      "req            INFO \tData has been written to cache!\n",
+      "req            INFO \tUsing cached data for session_status_data\n",
+      "req            INFO \tUsing cached data for track_status_data\n",
+      "req            INFO \tUsing cached data for _extended_timing_data\n",
+      "req            INFO \tUsing cached data for timing_app_data\n",
       "core           INFO \tProcessing timing data...\n",
       "core        WARNING \tDriver 23: Lap timing integrity check failed for 1 lap(s)\n",
-      "req            INFO \tNo cached data found for car_data. Loading data...\n",
-      "_api           INFO \tFetching car data...\n",
-      "_api           INFO \tParsing car data...\n",
-      "_api        WARNING \tDriver  2: Car data is incomplete!\n",
-      "_api        WARNING \tDriver  3: Car data is incomplete!\n",
-      "_api        WARNING \tDriver  7: Car data is incomplete!\n",
-      "_api        WARNING \tDriver  8: Car data is incomplete!\n",
-      "_api        WARNING \tDriver  9: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 11: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 15: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 17: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 19: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 20: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 21: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 24: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 25: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 26: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 28: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 29: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 43: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 44: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 55: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 63: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 81: Car data is incomplete!\n",
-      "_api        WARNING \tDriver 87: Car data is incomplete!\n",
-      "req            INFO \tData has been written to cache!\n",
-      "req            INFO \tNo cached data found for position_data. Loading data...\n",
-      "_api           INFO \tFetching position data...\n",
-      "_api           INFO \tParsing position data...\n",
-      "_api        WARNING \tDriver  1: Position data is incomplete!\n",
-      "_api        WARNING \tDriver  2: Position data is incomplete!\n",
-      "_api        WARNING \tDriver  3: Position data is incomplete!\n",
-      "_api        WARNING \tDriver  4: Position data is incomplete!\n",
-      "_api        WARNING \tDriver  5: Position data is incomplete!\n",
-      "_api        WARNING \tDriver  6: Position data is incomplete!\n",
-      "_api        WARNING \tDriver  7: Position data is incomplete!\n",
-      "_api        WARNING \tDriver  8: Position data is incomplete!\n",
-      "_api        WARNING \tDriver  9: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 10: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 11: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 12: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 14: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 15: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 16: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 17: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 18: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 19: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 20: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 21: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 22: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 23: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 24: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 25: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 26: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 27: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 28: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 29: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 43: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 44: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 55: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 63: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 81: Position data is incomplete!\n",
-      "_api        WARNING \tDriver 87: Position data is incomplete!\n",
-      "req            INFO \tData has been written to cache!\n",
-      "req            INFO \tNo cached data found for weather_data. Loading data...\n",
-      "_api           INFO \tFetching weather data...\n",
-      "req            INFO \tData has been written to cache!\n",
-      "req            INFO \tNo cached data found for race_control_messages. Loading data...\n",
-      "_api           INFO \tFetching race control messages...\n",
-      "req            INFO \tData has been written to cache!\n",
+      "req            INFO \tUsing cached data for car_data\n",
+      "req            INFO \tUsing cached data for position_data\n",
+      "req            INFO \tUsing cached data for weather_data\n",
+      "req            INFO \tUsing cached data for race_control_messages\n",
       "core           INFO \tFinished loading data for 20 drivers: ['1', '4', '5', '6', '10', '12', '14', '16', '18', '22', '23', '27', '30', '31', '43', '44', '55', '63', '81', '87']\n"
      ]
     }
@@ -154,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "2b6ca4e0",
    "metadata": {},
    "outputs": [
@@ -195,7 +115,7 @@
        "Name: 190, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "8a33214b",
    "metadata": {},
    "outputs": [
@@ -544,7 +464,7 @@
        "[533 rows x 18 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "862a5208",
    "metadata": {},
    "outputs": [
